--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
     <script src="project0.js"></script>
 </head>
 <body>
-    <h1>Play Tic Tac Toe!</h1>
-    <p>yo yo yo</p>
-    <p>Coming Soon</p>
-
-    <img src=""
+    <main class="background">
+        <secton class="title">
+            <h1>Play Tic Tac Toe!</h1>
+            <section class="display">
+                Player<span class="display-player playerX">X</span>'s turn
+            </section>
+            <section class="container">
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
