css html and start of js

--- a/index.html
+++ b/index.html
@@ -6,27 +6,31 @@
     <title>Project0-TicTacToe</title>
     <link rel="stylesheet" href="project0.css">
     <script src="project0.js"></script>
+
 </head>
 <body>
     <main class="background">
         <secton class="title">
             <h1>Play Tic Tac Toe!</h1>
-            <section class="display">
-                Player<span class="display-player playerX">X</span>'s turn
-            </section>
-            <section class="container">
-                <div class="tile"></div>
-                <div class="tile"></div>
-                <div class="tile"></div>
-                <div class="tile"></div>
-                <div class="tile"></div>
-                <div class="tile"></div>
-                <div class="tile"></div>
-                <div class="tile"></div>
-                <div class="tile"></div>
-                <div class="tile"></div>
-            </section>
         </section>
+            <div class="display">
+                Player<span class="display-player playerX">X</span>'s turn
+            </div>
+            <div class="container">
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+            </div>
+            <div class="display announcer hide"></div>
+            <div class="Controls">
+                <button id="reset">Reset</button>
+            </div>
     </main>
 </body>
 </html>
