finshed up MD file, tweaked some js code

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <title>Project0-TicTacToe</title>
     <link rel="stylesheet" href="project0.css">
     <script src="project0.js"></script>
+    <script src="js/jquery.js"></script>
 
 </head>
 <body>
     <main class="background">
-        <secton class="title">
+        <secion class="title">
             <h1>Play Tic Tac Toe!</h1>
         </section>
             <div class="display">
                 Player<span class="display-player playerX">X</span>'s turn
             </div>
+
             <div class="container">
                 <div class="tile"></div>
                 <div class="tile"></div>
@@ -31,6 +33,13 @@
             <div class="Controls">
                 <button id="reset">Reset</button>
             </div>
+            <div>
+                <button id="NextGame">Next Game</button>
+            </div>
     </main>
+    <div class="counter">
+    <h2 id="xScore">X - 0</h2>
+    <h2 id="oScore">O - 0</h2>
+    </div>
 </body>
-</html>
+</html
